--- a/desafios/desafio10/igreja.html
+++ b/desafios/desafio10/igreja.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog da Comunidade IDE</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-            <h1>Igreja Comunidade IDE</h1>
+            <div><img src="imagens/logopq.png" alt=""></div>
+            <h1><u><b>Igreja Comunidade IDE</b></u></h1>
+            <p>Seja bem vindo ao nosso site, Que Deus te abençoe!</p>
     </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Instagram</a>
+        <a href="#">Spotify</a>
+        <a href="#">Facebook</a>
+    </nav>
     <main>
-
+            <h1><u><b>Somos uma igreja em Células</b></u></h1>
     </main>
     <footer>
 
