--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamanho de imagem</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /*
+                Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +36,12 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, iusto exercitationem ducimus officiis quos aspernatur qui hic, facere veritatis obcaecati voluptatibus molestiae, nihil libero eaque! Itaque iure quis est voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi quas asperiores iure minima sed expedita quisquam. Qui quam quod consectetur, mollitia eius nihil, fugit reiciendis nostrum recusandae, ad maiores!</p>
     </main>
 </body>
